feat: fill content and css design

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Portfolio</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./static/css/style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 </head>
 
 <body>
-    <main class="flex-container">
+    <main class="flex-container-big">
         <a href="https://github.com/craankism/">
             <img class="flex-item" id="icon" src="./static/img/turtle_duck.jpg" alt="Turtle Duck from Avatar">
         </a>
