fix: small structure changes

--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -25,13 +25,48 @@
             <img class="content-item logo"
                 src="https://roadmap.sh/card/wide/687e7516d8402b4cbdcdfc33?variant=dark&roadmaps=devops%2Cgolang%2Cjavascript%2Cfrontend"
                 alt="Link to roadmap.sh" /></a>
-        <p id="text" class="content-item">
-            Hey, I'm Sascha Schwellnus aka Craankism, a passionate, mostly self-taught, developer. I'm currently enrolled
-            in a course for software development at Coders.Bay Vienna, to be more specific, Fullstack-Development. My trained profession is
-            electrical engineering with a focus on operational technology. I commited to change my career path, as I found my true passion in coding. The main aspect
-            that fascinates me, is the ability to create something out of nothing with a deep logical thinking process. I love to solve problems and
+        <p class="content-item text">
+            Hey, I'm Sascha "craankism" Schwellnus, a passionate, mostly self-taught, developer. I'm currently
+            enrolled
+            in a course for software development at Coders.Bay Vienna, to be more specific, Fullstack-Development. My
+            trained profession is
+            electrical engineering with a focus on operational technology. I commited to change my career path, as I
+            found my true passion in coding. The main aspect
+            that fascinates me, is the ability to create something out of nothing with a deep logical thinking process.
+            I love to solve problems and
             continuously learn new things.
         </p>
+        <section class="list-start">
+            <h2>Technologies I am familiar with:</h2>
+            <ul class="content-item">
+                <li>Go</li>
+                <li>HTML & CSS</li>
+                <li>Arduino</li>
+                <li>Git & GitHub</li>
+                <li>Linux</li>
+                <li>CI/CD with GitHub Actions</li>
+                <li>Docker</li>
+            </ul>
+        </section>
+        <section class="list-start">
+            <h2>Hobbies:</h2>
+            <ul>
+                <li>Gaming</li>
+                <li>Japan</li>
+                <li>Anime</li>
+                <li>Coding</li>
+                <li>Music</li>
+            </ul>
+        </section>
+        <section class="list-start">
+            <h2>Favourite Music Genre:</h2>
+            <ul>
+                <li>Rap</li>
+                <li>Drum and Bass</li>
+                <li>Nu Metal</li>
+                <li>Metal Core</li>
+            </ul>
+        </section>
     </main>
 </body>
 
