fix: remove .html ext from url

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <img class="flex-item" id="icon" src="./static/img/turtle_duck.jpg" alt="Turtle Duck from Avatar">
         </a>
         <nav class="navigation">
-            <a href="./index.html" class="flex-item">Home</a>
             <a href="./pages/about_me.html" class="flex-item">About me</a>
             <a href="./pages/projects.html" class="flex-item">Projects</a>
-            <a href="./static/img/Lebenslauf.pdf" class="flex-item">CV</a>
+            <a href="https://github.com/craankism/" class="flex-item">GitHub</a>
         </nav>
     </main>
 </body>
