--- a/pages/about_me.html
+++ b/pages/about_me.html
@@ -11,18 +11,18 @@
 <body class="combine_containers">
     <header class="flex-container-small">
         <nav class="navigation-top">
-            <a href="../index.html" class="flex-item-top">Home</a>
+            <a href="../" class="flex-item-top">Home</a>
             <a href="./about_me.html" class="flex-item-top">About me</a>
             <a href="./projects.html" class="flex-item-top">Projects</a>
-            <a href="../static/img/Lebenslauf.pdf" class="flex-item-top">CV</a>
+            <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
         </nav>
     </header>
     <main class="content">
-        <a href="https://github.com/craankism/automatic_watering_system">
+        <a href="https://github.com/craankism">
             <img class="content-item logo" src="../static/img/GitHub_Lockup_Black.svg" alt="GitHub Link to Repository">
         </a>
         <a href="https://roadmap.sh">
-            <img class="content-item logo"
+            <img id="roadmap" class="content-item logo"
                 src="https://roadmap.sh/card/wide/687e7516d8402b4cbdcdfc33?variant=dark&roadmaps=devops%2Cgolang%2Cjavascript%2Cfrontend"
                 alt="Link to roadmap.sh" /></a>
         <p class="content-item text">
