--- a/projects/watering_system.html
+++ b/projects/watering_system.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Calculator</title>
+    <title>Watering System</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../static/css/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
@@ -11,10 +11,10 @@
 <body class="combine_containers">
     <header class="flex-container-small">
         <nav class="navigation-top">
-            <a href="../index.html" class="flex-item-top">Home</a>
+            <a href="../" class="flex-item-top">Home</a>
             <a href="../pages/about_me.html" class="flex-item-top">About me</a>
             <a href="../pages/projects.html" class="flex-item-top">Projects</a>
-            <a href="../static/img/Lebenslauf.pdf" class="flex-item-top">CV</a>
+            <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
         </nav>
     </header>
     <main class="content">
