--- a/projects/calc.html
+++ b/projects/calc.html
@@ -11,10 +11,10 @@
 <body class="combine_containers">
     <header class="flex-container-small">
         <nav class="navigation-top">
-            <a href="../index.html" class="flex-item-top">Home</a>
+            <a href="../" class="flex-item-top">Home</a>
             <a href="../pages/about_me.html" class="flex-item-top">About me</a>
             <a href="../pages/projects.html" class="flex-item-top">Projects</a>
-            <a href="../static/img/Lebenslauf.pdf" class="flex-item-top">CV</a>
+            <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
         </nav>
     </header>
     <main class="content">
