--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,9 +19,9 @@
     </header>
     <main class="flex-container-big">
         <nav class="navigation">
-            <a href="../projects/watering_system.html" class="flex-item">Watering System</a>
-            <a href="../projects/calc.html" class="flex-item">Calculator</a>
-            <a href="../projects/sorter.html" class="flex-item">Sorter</a>
+            <a href="../projects/watering_system" class="flex-item">Watering System</a>
+            <a href="../projects/calc" class="flex-item">Calculator</a>
+            <a href="../projects/sorter" class="flex-item">Sorter</a>
         </nav>
     </main>
 </body>
