fix: reverting todays changes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img class="flex-item" id="icon" src="./static/img/turtle_duck.jpg" alt="Turtle Duck from Avatar">
         </a>
         <nav class="navigation">
-            <a href="./pages/about_me" class="flex-item">About me</a>
-            <a href="./pages/projects" class="flex-item">Projects</a>
+            <a href="./pages/about_me.html" class="flex-item">About me</a>
+            <a href="./pages/projects.html" class="flex-item">Projects</a>
             <a href="https://github.com/craankism/" class="flex-item">GitHub</a>
         </nav>
     </main>
