--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,16 +12,16 @@
     <header class="flex-container-small">
         <nav class="navigation-top">
             <a href="../" class="flex-item-top">Home</a>
-            <a href="./about_me" class="flex-item-top">About me</a>
-            <a href="./projects" class="flex-item-top">Projects</a>
+            <a href="./about_me.html" class="flex-item-top">About me</a>
+            <a href="./projects.html" class="flex-item-top">Projects</a>
             <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
         </nav>
     </header>
     <main class="flex-container-big">
         <nav class="navigation">
-            <a href="../projects/watering_system" class="flex-item">Watering System</a>
-            <a href="../projects/calc" class="flex-item">Calculator</a>
-            <a href="../projects/sorter" class="flex-item">Sorter</a>
+            <a href="../projects/watering_system.html" class="flex-item">Watering System</a>
+            <a href="../projects/calc.html" class="flex-item">Calculator</a>
+            <a href="../projects/sorter.html" class="flex-item">Sorter</a>
         </nav>
     </main>
 </body>
