--- a/projects/sorter.html
+++ b/projects/sorter.html
@@ -12,8 +12,8 @@
     <header class="flex-container-small">
         <nav class="navigation-top">
             <a href="../" class="flex-item-top">Home</a>
-            <a href="../pages/about_me" class="flex-item-top">About me</a>
-            <a href="../pages/projects" class="flex-item-top">Projects</a>
+            <a href="../pages/about_me.html" class="flex-item-top">About me</a>
+            <a href="../pages/projects.html" class="flex-item-top">Projects</a>
             <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
         </nav>
     </header>
