feat: add CV and GitHub to nav

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="./pages/about_me.html" class="flex-item">About me</a>
             <a href="./pages/projects.html" class="flex-item">Projects</a>
             <a href="https://github.com/craankism/" class="flex-item">GitHub</a>
+            <a href="./static/img/cv.pdf" class="flex-item">CV</a>
         </nav>
     </main>
 </body>
