--- a/projects/sorter.html
+++ b/projects/sorter.html
@@ -15,6 +15,7 @@
             <a href="../pages/about_me.html" class="flex-item-top">About me</a>
             <a href="../pages/projects.html" class="flex-item-top">Projects</a>
             <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
+            <a href="../static/img/cv.pdf" class="flex-item-top">CV</a>
         </nav>
     </header>
     <main class="content">
