--- a/projects/calc.html
+++ b/projects/calc.html
@@ -15,6 +15,7 @@
             <a href="../pages/about_me.html" class="flex-item-top">About me</a>
             <a href="../pages/projects.html" class="flex-item-top">Projects</a>
             <a href="https://github.com/craankism/" class="flex-item-top">GitHub</a>
+            <a href="../static/img/cv.pdf" class="flex-item-top">CV</a>
         </nav>
     </header>
     <main class="content">
@@ -31,7 +32,9 @@
             It uses a parser to transform the terms into RPN (Reverse Polish Notation).
             After that, the RPN is calculated using the Shunting Yard algorithm.
         </p>
+        <a href="https://calc.craankism.com">
         <img class="content-item logo" src="../static/img/calc.png" alt="Calculator Demo">
+        </a>
     </main>
 </body>
 
