feat: add photos of watering system

--- a/projects/watering_system.html
+++ b/projects/watering_system.html
@@ -31,7 +31,7 @@
             It also has an OLED display to show the current soil moisture level, air humidity and show an alarm,
             if any of them drops below a certain threshold.
         </p>
-        <ul class="content-item text">
+        <ul class="content-item">
             <h2>Hardware used:</h2>
             <li>Arduino Uno R4 WiFi</li>
             <li>Modulino Thermo</li>
@@ -44,6 +44,9 @@
             <li>Silicone hose</li>
             <li>Relay module</li>
         </ul>
+        <img class="content-item phone-photo" src="../static/img/watering_system1.jpg" alt="Full photo of the watering system">
+
+        <img class="content-item phone-photo" src="../static/img/watering_system2.jpg" alt="Full photo of the watering system">
     </main>
 </body>
 
